--- a/scmod.conf
+++ b/scmod.conf
@@ -9,7 +9,7 @@ script
     #export HOME="/root"
 
     echo $$ > /var/run/scmod.pid
-    exec sudo -u nobody /usr/local/bin/node --expose-gc /usr/local/lib/node_modules/scmod/modules.js >> /var/log/scmod.log 2>&1
+    exec sudo -u nobody sh /usr/local/lib/node_modules/scmod/start >> /var/log/scmod.log 2>&1
 end script
 
 pre-start script
