--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 
 	"author":{ 
-		"name" : "Vopilovsky Constantine",
+		"name" : "Vopilovskiy Konstantin",
 		"email" : "flash.vkv@gmail.com",
 		"url" : "http://vflash.ru"
 	},
