--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
 	"name" : "scmod",
 	"description": "client side javascript modules",
 	"keywords": ["javascript", "modules"],
-	"version": "0.2.1",
+	"version": "0.2.2",
 
 	"main" : "./index.js",
 
-	"homepage": "https://github.com/nodeca/js-yaml",
+	"homepage": "https://github.com/vflash/scmod",
 	"bugs": {
-		"url": "https://github.com/vflash/scmod"
+		"url": "https://github.com/vflash/scmod/issues"
 	},
 
 	"author":{ 
