--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name" : "scmod",
     "description": "client side javascript modules",
     "keywords": ["javascript", "modules"],
-    "version": "0.2.37",
+    "version": "0.2.38",
 
     "main" : "./index.js",
 
@@ -47,6 +47,7 @@
     ],
 
     "bin": {
+        "scmod-modules": "bin/scmod-modules",
         "scmod-scripts": "bin/scmod-scripts",
         "scmod-styles": "bin/scmod-styles",
         "scmod-langs": "bin/scmod-langs"
