--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
         "lib/console.js",
         "lib/load-replace.js",
         "lib/load-config.js",
-        "lib/load-cache.js",
-        "lib/load-result.js",
         "lib/load.js",
+        "lib/prox.js",
+        "lib/file-cache.js",
+        "lib/file-result.js",
         "lib/cmd-sandbox.js",
         "lib/cmd-sandbox_styles.js",
         "lib/cmd-script_pack.js",
