--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "javascript",
         "modules"
     ],
-    "version": "0.3.3",
+    "version": "0.3.4",
     "main": "./index.js",
     "homepage": "https://github.com/vflash/scmod",
     "bugs": {
@@ -17,7 +17,11 @@
         "url": "http://vflash.ru"
     },
 
-    "dependencies": ["js-json", "http-xak", "js-yaml"],
+    "dependencies": {
+      "js-json": "*",
+      "http-xak": "*",
+      "js-yaml": "*"
+    },
 
     "files": [
         "LICENSE",
@@ -34,6 +38,7 @@
         "lib/load-replace.js",
         "lib/load-config.js",
         "lib/load.js",
+        "lib/prox.js",
         "lib/file-cache.js",
         "lib/file-result.js",
         "lib/cmd-sandbox.js",
