--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "javascript",
         "modules"
     ],
-    "version": "0.3.9",
+    "version": "0.4.1",
     "main": "./index.js",
     "homepage": "https://github.com/vflash/scmod",
     "bugs": {
@@ -27,6 +27,7 @@
         "LICENSE",
         "README.md",
         "scmod.conf",
+        "bin/scmod-server",
         "bin/scmod-scripts",
         "bin/scmod-styles",
         "bin/scmod",
@@ -52,6 +53,7 @@
         "lib/jsmin.js"
     ],
     "bin": {
+        "scmod-server": "bin/scmod-server",
         "scmod-scripts": "bin/scmod-scripts",
         "scmod-styles": "bin/scmod-styles",
         "scmod": "bin/scmod"
